# Hands_Are_Faster_than_Eyes

./: README.md
.github/: pull_request_template.md
src/: hand_tracker.cpp  palm_center_show.cpp  test_opencv.cpp
src/mediapipe/: BUILD  README.md  hand_tracker.cpp  hand_tracker.h  main.cpp  net_client.cpp  net_client.h
src/opencv_ws/: CMakeLists.txt  fingertips.cpp  hand_palm_coords.cpp  hand_ycrcb_hull.cpp  palm_center_show_cuda_clinet.cpp
src/qt/: AiotClient.pro  AiotClient.pro.user.6d41e0a  README.md  main.cpp  mainwidget.cpp  mainwidget.h  mainwidget.ui  socketclient.cpp  socketclient.h  tab1devcontrol.cpp  tab1devcontrol.h  tab1devcontrol.ui  tab2socketclient.cpp  tab2socketclient.h  tab2socketclient.ui
src/rsp_server/: Makefile  README.md  ledkey_server.c  ledkey_simple_dev.c
